[package]
name = "d3270"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.0", features = ["rt", "macros", "sync", "process"] }
tide = "0.16.0"
tide-websockets = "0.4.0"
serde = { version = "1.0.162", features = ["derive"]}
serde_json = "1.0.96"
serde_cbor = "0.11.2"
anyhow = "1.0.71"
bitflags = "2.2.1"