[package]
name = "d3270d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.162", features = ["derive"]}
serde_json = "1.0.96"
anyhow = "1.0.71"
tokio = { version = "1.28.0", features = ["full"] }
tide = "0.16.0"
tide-websockets = "0.4.0"
tide-tracing = "0.0.12"
d3270-common = {path = "../d3270-common"}
bytes = "1.4.0"
tracing = "0.1.37"
tracing-fmt = "0.1.1"
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
futures = "0.3.28"
tokio-stream = { version = "0.1.14", features = ["sync"] }
rand = "0.8.5"
base64 = "0.21.0"
lazy_static = "1.4.0"